--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -8,15 +8,6 @@
 <div class="hero-section">
   <h1>🎯 Welcome to the Django Quiz App!</h1>
   <p>Challenge yourself, test your knowledge, and track your scores!</p>
-  <a href="{% url 'quiz:home' %}" class="btn-start">Start Quiz Now</a>
+  <a href="{% url 'quiz:start-quiz' %}" class="btn-start">Start Quiz Now</a>
 </div>
-
- 
-
-      
-    
-    </div>
-  </div>
-</div
-
 {% endblock %}
