feat(quiz): add button to add new questions in quiz form
- Inserted "+ Add Question" button in the quiz creation form
- Positioned the button alongside submit and reset controls
- Enabled user interface to begin adding quiz questions dynamically

--- a/quiz/templates/quiz/create-quiz.html
+++ b/quiz/templates/quiz/create-quiz.html
@@ -43,6 +43,7 @@
       </div>
       
       <div class="form-actions">
+        <button type="button" id="addQuestion" class="btn-add">+ Add Question</button></h2>
         <button type="submit" class="btn-submit">Create Quiz</button>
         <button type="reset" class="btn-reset">Reset Form</button>
       </div>
